# captionalchemy

./: .coverage  .env  .gitignore  README.md  inference.py  output_captions.srt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
example/: known_faces.json
src/: inference.py
src/captionalchemy/: caption.py
src/captionalchemy/tools/audio_analysis/: audio_segment_integration.py
src/captionalchemy/tools/captioning/: timing_analyzer.py  transcriber.py
src/captionalchemy/tools/captioning/writers/: sami_writer.py  srt_writer.py
src/captionalchemy/tools/cv/: embed_known_faces.py
src/tools/: download_video.py  embed_known_faces.py
src/tools/audio_analysis/: audio_segment_integration.py  non_speech_detection.py
src/tools/captioning/: timing_analyzer.py
tests/: conftest.py  test_audio_integration.py  test_embed_faces.py  test_main.py  test_sami_writer.py  test_srt_writer.py  test_transcriber.py
tools/: caption_formatter.py  download_video.py  recognize_faces.py  transcription.py
tools/audio_analysis/: audio_segment_integration.py
tools/captioning/: caption_formatter.py  timing_analyzer.py  transcriber.py
